@@ -2955,6 +2955,8 @@ geniCodeLogic (operand * left, operand * right, int op, ast * tree)
   /* Avoid expensive comparisons when the type of the constant is bigger than the type of the non-const operand */
   if (IS_INTEGRAL (ltype) && IS_LITERAL (rtype) && getSize (ltype) < getSize (rtype) && !TARGET_HC08_LIKE)
     right->svt.valOperand = valCastLiteral (ltype, operandLitValue (right), operandLitValue (right));
+  if (IS_INTEGRAL (rtype) && IS_LITERAL (ltype) && getSize (rtype) < getSize (ltype) && !TARGET_HC08_LIKE)
+    left->svt.valOperand = valCastLiteral (rtype, operandLitValue (left), operandLitValue (left));
 
   /* if one operand is a pointer and the other is a literal generic void pointer,
      change the type of the literal generic void pointer to match the other pointer */
